Updated dependencies; updated models structure

--- a/tox.ini
+++ b/tox.ini
@@ -1,21 +1,17 @@
 [tox]
 envlist =
     flake8
-    py{34,27}-latest
-    py{34,27}-dj18-cms{34,33}
-    py{34,27}-dj19-cms{34,33}
-
+    py38-dj22-cms38
 skip_missing_interpreters=True
 
 
 [testenv]
 deps =
     -r{toxinidir}/tests/requirements.txt
-    dj18: Django>=1.8,<1.9
-    dj19: Django>=1.9,<1.10
+    dj22: Django>=2.2, <2.3
     latest: django-cms
-    cms33: django-cms>=3.3,<3.4
-    cms34: django-cms>=3.4,<3.5
+    cms38: django-cms>=3.8,<3.9
+
 commands =
     {envpython} --version
     {env:COMMAND:coverage} erase
